Lock Screen Finished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,19 +41,9 @@
             android:theme="@style/AppTheme.Wallpaper">
         </activity>
 
-        <receiver android:name=".MyAdmin" android:permission="android.permission.BIND_DEVICE_ADMIN">
-            <meta-data android:name="android.app.device_admin"
-                android:resource="@xml/policies" />
-
-            <intent-filter>
-                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED"/>
-
-            </intent-filter>
-
-        </receiver>
-
         <receiver android:name=".MyReciever">
             <intent-filter>
+                <action android:name="android.intent.action.SCREEN_OFF"/>
                 <action android:name="android.intent.action.SCREEN_ON"/>
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
